force-app/main/default/objects/HAM_Event_Form_Element__c/HAM_Event_Form_Element__c.object-meta.xml
<CustomObject>
    <label>Event Form Element</label>
    <nameField>
        <label>Event Form Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Form Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>