force-app/main/default/objects/HAM_Event_Form_Element__c/fields/HAM_BT_Controlling_Element_Id__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Controlling_Element_Id__c</fullName>
    <description>The Salesforce Record ID of the parent controlling form element in Blackthorn. Used to identify conditional/dependent question relationships.</description>
    <inlineHelpText>ID of the form element that controls the visibility of this question.</inlineHelpText>
    <label>BT Controlling Element Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>