force-app/main/default/objects/HAM_Event_Form_Element__c/fields/HAM_BT_Form_Element__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Form_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the originating Blackthorn form element record. Provides a navigable back-link for validation and cross-reference.</description>
    <inlineHelpText>Click to navigate to the original Blackthorn form element record. Null indicates this record was not migrated from Blackthorn.</inlineHelpText>
    <label>BT Form Element</label>
    <referenceTo>conference360__Form__c</referenceTo>
    <relationshipLabel>Event Form Elements</relationshipLabel>
    <relationshipName>Event_Form_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>