force-app/main/default/objects/HAM_Event_Form_Element__c/fields/HAM_Character_Length__c.field-meta.xml
<CustomField>
    <fullName>HAM_Character_Length__c</fullName>
    <description>Maximum character length allowed for text answers, carried over from Blackthorn.</description>
    <inlineHelpText>The maximum number of characters the attendee can enter.</inlineHelpText>
    <label>Character Length</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>