force-app/main/default/objects/HAM_Event_Form_Element__c/fields/HAM_Controlling_Element_Answer__c.field-meta.xml
<CustomField>
    <fullName>HAM_Controlling_Element_Answer__c</fullName>
    <description>The answer value on the controlling element that triggers visibility of this question, carried over from Blackthorn.</description>
    <inlineHelpText>This question is shown when the controlling element has this answer value.</inlineHelpText>
    <label>Controlling Element Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>