force-app/main/default/objects/HAM_Event_Form_Element__c/fields/HAM_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>HAM_Default_Value__c</fullName>
    <description>The default answer value for this form element, carried over from Blackthorn.</description>
    <inlineHelpText>Pre-filled answer shown to the attendee.</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>