force-app/main/default/objects/HAM_Event_Form_Element__c/fields/HAM_Event_Form__c.field-meta.xml
<CustomField>
    <fullName>HAM_Event_Form__c</fullName>
    <description>Master-detail relationship linking this form element to its parent form.</description>
    <inlineHelpText>The form this element belongs to.</inlineHelpText>
    <label>Event Form</label>
    <referenceTo>HAM_Event_Form__c</referenceTo>
    <relationshipLabel>Event Form Elements</relationshipLabel>
    <relationshipName>Event_Form_Elements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>