force-app/main/default/objects/HAM_Event_Form_Element__c/fields/HAM_Hint__c.field-meta.xml
<CustomField>
    <fullName>HAM_Hint__c</fullName>
    <description>Hint or helper text shown below the question, carried over from Blackthorn.</description>
    <inlineHelpText>Instructional text shown to the attendee below the question.</inlineHelpText>
    <label>Hint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>