force-app/main/default/objects/HAM_Event_Form_Element__c/fields/HAM_Maps_To_Field__c.field-meta.xml
<CustomField>
    <fullName>HAM_Maps_To_Field__c</fullName>
    <description>The Salesforce field API name this question maps to, carried over from Blackthorn.</description>
    <inlineHelpText>The field this question writes to on the mapped object.</inlineHelpText>
    <label>Maps To Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>