force-app/main/default/objects/HAM_Event_Form_Element__c/fields/HAM_Maps_To_Object__c.field-meta.xml
<CustomField>
    <fullName>HAM_Maps_To_Object__c</fullName>
    <description>The Salesforce object API name this question maps to, carried over from Blackthorn.</description>
    <inlineHelpText>The object this question writes to (e.g. Contact, Lead).</inlineHelpText>
    <label>Maps To Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>