force-app/main/default/objects/HAM_Event_Form_Element__c/fields/HAM_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>HAM_Picklist_Values__c</fullName>
    <description>Newline-separated list of picklist options for this question, carried over from Blackthorn.</description>
    <inlineHelpText>Available answer options for picklist-type questions.</inlineHelpText>
    <label>Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>