force-app/main/default/objects/HAM_Event_Form_Element__c/fields/HAM_Question__c.field-meta.xml
<CustomField>
    <fullName>HAM_Question__c</fullName>
    <description>The question text for this form element carried over from Blackthorn.</description>
    <inlineHelpText>The question shown to the attendee on the form.</inlineHelpText>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>