force-app/main/default/objects/HAM_Event_Form_Element__c/fields/HAM_Question_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Question_Type__c</fullName>
    <description>The type of input for this question, carried over from Blackthorn.</description>
    <inlineHelpText>The question input type as it appeared in Blackthorn.</inlineHelpText>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>