force-app/main/default/objects/HAM_Event_Form_Element__c/fields/HAM_Required__c.field-meta.xml
<CustomField>
    <fullName>HAM_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this form element was required in Blackthorn.</description>
    <inlineHelpText>Checked if the attendee was required to answer this question.</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>